--- a/visualization/search-space/index.html
+++ b/visualization/search-space/index.html
@@ -15,6 +15,8 @@
         <div class='page'>
             <div class='button-area'>
             </div>
+            <div class='input-area'>
+            </div>
             <div class='tree-area'>
             </div>
         </div>
