Added the ability to change the heat root from the UI.

--- a/visualization/search-space/index.html
+++ b/visualization/search-space/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Collapsible Tree Example</title>
+        <title>Full Search Space Heat-Tree</title>
 
         <link rel='stylesheet' type='text/css' href='css/normalize.css'>
         <link rel='stylesheet' type='text/css' href='css/search-space.css'>
